--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,6 +1,7 @@
 #searchform {
     display: flex;
     justify-content: space-between;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgb(0, 0, 0, 0))
     
 }
 
@@ -12,8 +13,14 @@
     border: none;
 }
 
+#searchFood {
+    margin-left: -120px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
 #search {
-    height: 53px;
+    height: 47px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
     background-color: rgb(240, 18, 18);
@@ -33,6 +40,7 @@
 }
 
 #kelplogo {
+    color:rgb(2, 128, 86);
     font-size: x-large; 
     font-weight: 700;
     margin-top: 30px;
