--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,6 @@ h1, h2, p, strong, em, a, #login-button, li, ul, button {
   background: transparent;
 }
 
-#root {
+/* #root {
   background-image: image('https://cdn.vox-cdn.com/thumbor/WvRdh56SV72gtXbDpyF-Hyv97Bk=/0x0:2200x1238/1200x675/filters:focal(924x443:1276x795)/cdn.vox-cdn.com/uploads/chorus_image/image/65490624/01_Kensinger_east_side_resiliency_DSC_9403.0.jpg');
-}
+} */
