--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -85,6 +85,8 @@
 }
 
 body {
-    background: url("https://cdn.vox-cdn.com/thumbor/WvRdh56SV72gtXbDpyF-Hyv97Bk=/0x0:2200x1238/1200x675/filters:focal(924x443:1276x795)/cdn.vox-cdn.com/uploads/chorus_image/image/65490624/01_Kensinger_east_side_resiliency_DSC_9403.0.jpg");
+    /* background: url("https://cdn.vox-cdn.com/thumbor/WvRdh56SV72gtXbDpyF-Hyv97Bk=/0x0:2200x1238/1200x675/filters:focal(924x443:1276x795)/cdn.vox-cdn.com/uploads/chorus_image/image/65490624/01_Kensinger_east_side_resiliency_DSC_9403.0.jpg");
+     */
+     background-color: aquamarine;
     background-size: cover;
 }
