--- a/frontend/src/components/ProfileButton/ProfileButton.css
+++ b/frontend/src/components/ProfileButton/ProfileButton.css
@@ -1,6 +1,8 @@
 #profile-button {
     display: flex;
+    margin: 34px;
     border: 2px solid black;
+    border-radius: 5px;
     background-color: cadetblue;
 }
 
