--- a/frontend/src/components/ProfileButton/ProfileButton.css
+++ b/frontend/src/components/ProfileButton/ProfileButton.css
@@ -1,8 +1,18 @@
 #profile-button {
     display: flex;
-    margin: 34px;
-    border: 2px solid black;
+    margin: 24px;
+    padding: 10px;
     border-radius: 5px;
-    background-color: cadetblue;
+    color: white;
+    background-color: rgb(240, 18, 18);
+    border: 2px solid rgb(240, 18, 18);
 }
 
+#profile-button:hover {
+    cursor: pointer;
+    background-color: rgb(255, 19, 19);   
+}
+
+.profile-dropdown {
+    position: absolute;
+}
