add respective users to reviews, specify delete button to creator only

--- a/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
+++ b/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
@@ -1,3 +1,20 @@
+#businessName {
+    font-size: 28px;
+    font-weight: 700;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#businessRating {
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+#businessDescription {
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
 #reviewHeader {
     font-size: 24px;
     color: black;
