partially setup AWS (halfway point)

--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -101,8 +101,8 @@
 }
 
 body {
-    /* background: url("https://cdn.vox-cdn.com/thumbor/WvRdh56SV72gtXbDpyF-Hyv97Bk=/0x0:2200x1238/1200x675/filters:focal(924x443:1276x795)/cdn.vox-cdn.com/uploads/chorus_image/image/65490624/01_Kensinger_east_side_resiliency_DSC_9403.0.jpg");
-     */
-     background-color: white;
+    /* background: url(""); https://farallones.org/wp-content/uploads/2020/09/Photo-Cred-Keith-Johnson-bull-kelp-3-2-e1600450442796.jpeg */
+    
+     background-color: transparent;
     background-size: cover;
 }
