work on showpage background CSS

--- a/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
+++ b/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
@@ -10,6 +10,16 @@
     margin-bottom: 10px;
 }
 
+#businessImageHolder {
+    display: flex;
+    height: 400px;
+    background-repeat:repeat;
+}
+
+#businessImage {
+
+}
+
 #businessDescription {
     margin-left: 20px;
     margin-bottom: 20px;
