Add CSS to profile drop down, search bar, and individual business listings

--- a/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
+++ b/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
@@ -1,3 +1,7 @@
+#showSearchBar {
+    position: fixed;
+}
+
 #businessName {
     font-size: 28px;
     font-weight: 700;
@@ -16,9 +20,6 @@
     background-repeat:repeat;
 }
 
-#businessImage {
-
-}
 
 #businessDescription {
     margin-left: 20px;
