--- a/frontend/src/components/BusinessListings/BusinessListings.module.css
+++ b/frontend/src/components/BusinessListings/BusinessListings.module.css
@@ -15,3 +15,13 @@
     text-decoration: none;
     list-style: none;
 }
+
+#googleMap {
+    border: 1px solid black;
+    display: inline-block;
+    height: 90%;
+    width: 35%;
+    position: fixed;
+    right: 0;
+    top: 125px;
+}
