--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,6 +1,7 @@
 #searchBarDiv {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgb(0, 0, 0, 0));
     padding-bottom: 30px;
+    /* position: fixed; */
 }
 
 #searchform {
@@ -31,6 +32,7 @@
     border-top-right-radius: 5px;
     background-color: rgb(240, 18, 18);
     color: white;
+    box-shadow: 0 0 18px #00000026;
 }
 
 #search:hover {
