--- a/frontend/src/components/BusinessListings/BusinessListings.module.css
+++ b/frontend/src/components/BusinessListings/BusinessListings.module.css
@@ -17,11 +17,13 @@
 }
 
 #googleMap {
-    border: 1px solid black;
     display: inline-block;
     height: 90%;
     width: 35%;
     position: fixed;
     right: 0;
     top: 125px;
+    z-index: -100;
+    background-image: url('../../../../app/assets/images/mapPlaceHolder.jpg');
+    background-size: cover;
 }
