add Links to /listings

--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -51,7 +51,11 @@
 }
 
 .subSearch {
-    margin-left: 70px;
+    position: relative;
+
+    margin-left: 15%;
+    color: black;
+    font-size: 16px;
 }
 
 #kelplogo {
