--- a/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
+++ b/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
@@ -58,11 +58,59 @@
 
 .singleReview {
     margin-bottom: 20px;
+    padding: 10px;
     width: 500px;
+    border-top: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+}
+
+.singleReview:hover {
+    border-right: 1px solid #ebebeb;
+    border-left: 1px solid #ebebeb;
+    box-shadow: 0 0 18px #00000026;
+}
+
+.reviewMenu {
+    width: 24px;
+    height: 24px;
+    border-radius: 20px;
+}
+
+.reviewMenu:hover {
+    background-color: rgb(192, 186, 186);
+    cursor: pointer;
 }
 
 .paragraph {
     color: black;
+}
+
+.deleteReview {
+    color: white;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    border: 2px solid rgb(240, 18, 18);
+    background-color: rgb(240, 18, 18);
+}
+
+.deleteReview:hover {
+    cursor: pointer;
+    background-color: rgb(250, 42, 42);
+    border: 2px solid rgb(240, 18, 18);
+}
+
+.editReview {
+    margin: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    background-color: white;
+    border: 2px solid black;
+}
+
+.editReview:hover {
+    cursor: pointer;
+    background-color: rgb(240, 240, 240);
 }
 
 .reviewerName {
