--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -4,6 +4,7 @@
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 10;
 }
 
 #searchform {
@@ -35,6 +36,8 @@
     background-color: rgb(240, 18, 18);
     color: white;
     box-shadow: 0 0 18px #00000026;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #search:hover {
@@ -58,13 +61,25 @@
     font-size: 16px;
 }
 
+.downArrow {
+    margin: -5px;
+    padding-top: 2px;
+    padding-left:10px;
+    width: 24px;
+    height: 24px;
+}
+
 #kelplogo {
-    color:rgb(2, 128, 86);
+    color: rgb(240, 18, 18);
     font-size: x-large; 
     font-weight: 700;
     margin-top: 30px;
     margin-left: 70px;
     margin-right: 0px;
+}
+
+#kelplogo:hover {
+    cursor: pointer;
 }
 
 #signup {
@@ -106,6 +121,7 @@
 
 #login:hover {
     cursor: pointer;
+    background-color: rgb(149, 149, 149);
 }
 
 body {
