add text in case user has no favorite businesses yet

--- a/frontend/src/components/ProfilePage/ProfilePage.module.css
+++ b/frontend/src/components/ProfilePage/ProfilePage.module.css
@@ -1,3 +1,10 @@
 #mainHeader {
     margin-left: 25px;
 }
+
+#noFavorites {
+    margin-top: 30px;
+    margin-left: 35px;
+    color: black;
+    font-size: x-large;
+}
