add first review/placeholder to business listings

--- a/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
+++ b/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
@@ -16,7 +16,14 @@
     color: black;
 }
 
-#highestReview {
+#firstReview {
+    font-size: 14px;
+    color: black;
+}
+
+#firstReviewMissing {
+    font-size: 20px;
+    font-weight: bold;
     color: black;
 }
 
