--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -16,8 +16,7 @@
     z-index: 0;
     top: 0;
     left: 0;
-    background-image: url('https://images.unsplash.com/photo-1488188840666-e2308741a62f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&w=1000&q=80');
-    background-size:cover
+    background-color: blue;
 }
 
 #homePage3 {
