--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -1,6 +1,6 @@
 .carouselContainer {
     width: 100%;
-    height: 400px;
+    height: 700px;
     position: relative;
     overflow: hidden;
   }
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     background-position: center;
-    background-repeat: no-repeat;
+    /* background-repeat: no-repeat;  */
     background-size: cover;
     position: absolute;
     top: 0;
