--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -1,4 +1,10 @@
-#homePage1 {
+#container {
+    background-color: purple;
+    height: 100%;
+    width: 100%;
+}
+
+/* #homePage1 {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -27,4 +33,4 @@
     top: 0;
     left: 0;
     background-color: red;
-}
+} */
