--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,9 +1,10 @@
 #searchBarDiv {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgb(0, 0, 0, 0));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgb(0, 0, 0, 0));
     padding-bottom: 30px;
-    position: sticky;
+    position: absolute;
     top: 0;
-    background-color: white;
+    width: 100%;
+    opacity: 1;
     z-index: 10;
 }
 
