--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -16,8 +16,14 @@
     left: 0;
     opacity: 0;
     animation-name: fade-in-out;
-    animation-duration: 15s;
+    animation-duration: 9s;
     animation-iteration-count: infinite;
+  }
+
+  .followingBackgroundImage {
+    width: 100%;
+    height: 100%;
+    position: fixed;
   }
   
   @keyframes fade-in-out {
