--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -23,7 +23,9 @@
   .followingBackgroundImage {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
   }
   
   @keyframes fade-in-out {
