fix businessPhoto sizing on BusinessListingItem, initiate preview of businesses on home page

--- a/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
+++ b/frontend/src/components/BusinessListingItem/BusinessListingsItem.module.css
@@ -33,8 +33,10 @@
 
 #businessPreview {
     display: inline-block;
+    object-fit: cover;
     height: 225px;
     width: 225px;
+    border-radius: 4px;
 }
 
 #businessList {
