--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -4,33 +4,13 @@
     width: 100%;
 }
 
-/* #homePage1 {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    background-image: url('https://images.unsplash.com/photo-1488188840666-e2308741a62f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW58ZW58MHx8MHx8&w=1000&q=80');
-    background-size:cover
+#nextReviewHeader {
+    font-weight: 700;
+    font-size: 28px;
+    letter-spacing: -0.4px;
+    line-height: 36px;
+    color: rgba(45, 46, 47, 1);
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
-
-#homePage2 {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    background-color: blue;
-}
-
-#homePage3 {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    background-color: red;
-} */
