--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -9,18 +9,17 @@
     width: 100%;
     height: 100%;
     background-position: center;
-    /* background-repeat: no-repeat;  */
     background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0;
-    animation-name: fade-in-out;
+    opacity: 1;
+    /* animation-name: fade-in-out;
     animation-duration: 9s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: infinite; */
   }
 
-  .followingBackgroundImage {
+  /* .followingBackgroundImage {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -45,4 +44,4 @@
       opacity: 0;
       z-index: 1;
     }
-  }
+  } */
