--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -1,4 +1,5 @@
 .carouselContainer {
+  filter: brightness(100%);
     width: 100%;
     height: 700px;
     position: relative;
@@ -8,6 +9,7 @@
   .currentBackgroundImage {
     width: 100%;
     height: 100%;
+    filter: brightness(80%);
     background-position: center;
     background-size: cover;
     position: absolute;
@@ -17,6 +19,19 @@
     /* animation-name: fade-in-out;
     animation-duration: 9s;
     animation-iteration-count: infinite; */
+  }
+
+  .textContainer {
+    width: 400px;
+    position: absolute;
+    top: 20%;
+    left: 10%;
+
+  }
+
+  .heroText {
+    font-size: 48px;
+    color: white;
   }
 
   /* .followingBackgroundImage {
