--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,5 +1,5 @@
 #searchBarDiv {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgb(0, 0, 0, 0));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgb(0, 0, 0, 0));
     padding-bottom: 30px;
     top: 0;
     width: 100%;
@@ -12,6 +12,10 @@
     justify-content: space-between;
    
     
+}
+
+.pathDownArrow {
+    fill: white;
 }
 
 .searchbars {
@@ -62,7 +66,7 @@
     position: relative;
 
     margin-left: 15%;
-    color: black;
+    color: white;
     font-size: 16px;
 }
 
@@ -72,6 +76,7 @@
     padding-left:10px;
     width: 24px;
     height: 24px;
+    color: white;
 }
 
 #kelplogo {
