--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -2,7 +2,7 @@
     background-color: white;
     height: 100%;
     width: 100%;
-}
+};
 
 #nextReviewHeader {
     font-weight: 700;
@@ -13,4 +13,4 @@
     text-align: center;
     margin-top: 40px;
     margin-bottom: 40px;
-}
+};
