--- a/frontend/src/components/Carousel/Carousel.module.css
+++ b/frontend/src/components/Carousel/Carousel.module.css
@@ -34,6 +34,42 @@
     color: white;
   }
 
+  #searchIcon {
+    height: 22px;
+    width: 32px;
+    fill: white;   
+}
+
+  #findAquariumsButton {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(228, 20, 20);
+    border: 2px solid rgb(228, 20, 20);
+    display: inline-block;
+    color: white;
+    border-radius: 5px;
+    padding: 16px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-bottom: 15px;
+    margin-left: 0px;
+    margin-right: 1%;
+    margin-top: 10px;
+    font-size: 18px;
+    transition: 300ms;
+  }
+
+  #findAquariumsButton:hover {
+    cursor: pointer;
+    background-color: rgb(255, 0, 0);
+    border: 2px solid rgb(255, 0, 0); 
+  }
+
+  #buttonText {
+    display: inline-block;
+    color: white;
+  }
+
   /* .followingBackgroundImage {
     width: 100%;
     height: 100%;
