remove extraneous CSS on HomePage js file

--- a/frontend/src/components/HomePage/HomePage.module.css
+++ b/frontend/src/components/HomePage/HomePage.module.css
@@ -4,7 +4,7 @@
     width: 100%;
 };
 
-#nextReviewHeader {
+#checkOutTheseBusinesses {
     font-weight: 700;
     font-size: 28px;
     letter-spacing: -0.4px;
