--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -4,3 +4,14 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+#checkOutTheseBusinesses {
+    font-weight: 700;
+    font-size: 28px;
+    letter-spacing: -0.4px;
+    line-height: 36px;
+    color: rgba(45, 46, 47, 1);
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+};
