--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -1,9 +1,9 @@
-#homePageBusinessPreviewContainer {
+/* #homePageBusinessPreviewContainer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-}
+} */
 
 #checkOutTheseBusinesses {
     font-weight: 700;
@@ -15,4 +15,11 @@
     margin-top: 40px;
     margin-bottom: 40px;
 };
+
+#businessesGrid {
+    background-color: red;
+    display: grid;
+    grid-template-columns: minmax(0px, 1fr) minmax(0px, 1fr);
+    gap: 32px;
+}
 
