--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -1,10 +1,3 @@
-/* #homePageBusinessPreviewContainer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-} */
-
 #checkOutTheseBusinesses {
     font-weight: 700;
     font-size: 28px;
@@ -16,7 +9,7 @@
     margin-bottom: 40px;
 };
 
-#businessesGrid {
+#grid {
     background-color: red;
     display: grid;
     grid-template-columns: minmax(0px, 1fr) minmax(0px, 1fr);
