--- a/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
+++ b/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
@@ -2,11 +2,14 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    border: 1px solid black;
+    border: 1px solid rgb(228, 219, 219);
+    border-radius: 3px;
     height: 200px;
     width: 40%;
     margin-left: 2.5%;
     margin-right: 2.5%;
+    margin-bottom: 2.5%;
+    cursor: pointer;
 }
 
 #picture {
@@ -18,11 +21,32 @@
     object-fit: cover;
     width: 200px;
     height: 200px;
-    border-radius: 4px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
 }
 
 #businessName {
+    margin-top: 20px;
+    margin-left: 10px;
     color: black;
     font-weight: 700;
     font-size: 25px;
+}
+
+.doYouRecommend {
+    font-size: 16px;
+    color: black;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.reviewScore {
+    margin-left: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+}
+
+.reviewStar {
+    margin-right: 2px;
 }
