--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -9,10 +9,9 @@
     margin-bottom: 40px;
 };
 
-#grid {
+.homePageBusinesses {
     background-color: red;
-    display: grid;
-    grid-template-columns: minmax(0px, 1fr) minmax(0px, 1fr);
-    gap: 32px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
