--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -9,9 +9,7 @@
     margin-bottom: 40px;
 };
 
-.homePageBusinesses {
-    background-color: red;
+#homePageBusinesses {
     display: flex;
     flex-wrap: wrap;
-}
-
+};
