--- a/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
+++ b/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
@@ -1,8 +1,20 @@
+#displayInlineBlock {
+    display: inline-block;
+    width: 40%;
+    height: 200px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-bottom: 2.5%;
+    border: 1px solid rgb(228, 219, 219);
+    border-radius: 3px;
+    cursor: pointer;
+}
+
 .homePageBusinessItemContainer {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    border: 1px solid rgb(228, 219, 219);
+
     border-radius: 3px;
     height: 200px;
     width: 40%;
@@ -23,6 +35,7 @@
     height: 200px;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
+    margin-left: -13px;
 }
 
 #businessName {
