--- a/frontend/src/components/ReviewMenu/ReviewMenu.module.css
+++ b/frontend/src/components/ReviewMenu/ReviewMenu.module.css
@@ -10,3 +10,31 @@
     cursor: pointer;
     transition: 1s;
 }
+
+.deleteReview {
+    color: white;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    border: 2px solid rgb(240, 18, 18);
+    background-color: rgb(240, 18, 18);
+}
+
+.deleteReview:hover {
+    cursor: pointer;
+    background-color: rgb(250, 42, 42);
+    border: 2px solid rgb(240, 18, 18);
+}
+
+.editReview {
+    margin: 5px;
+    padding: 5px;
+    border-radius: 4px;
+    background-color: white;
+    border: 2px solid black;
+}
+
+.editReview:hover {
+    cursor: pointer;
+    background-color: rgb(240, 240, 240);
+}
