remove accidental ; strings, fix button overlaying ... svg

--- a/frontend/src/components/ReviewMenu/ReviewMenu.module.css
+++ b/frontend/src/components/ReviewMenu/ReviewMenu.module.css
@@ -38,3 +38,9 @@
     cursor: pointer;
     background-color: rgb(240, 240, 240);
 }
+
+#buttons {
+    margin-top: 25px;
+    position: absolute;
+    left: 440px;
+}
