--- a/frontend/src/components/ReviewMenu/ReviewMenu.module.css
+++ b/frontend/src/components/ReviewMenu/ReviewMenu.module.css
@@ -12,6 +12,8 @@
 }
 
 .deleteReview {
+    display: block;
+    width: 50px;
     color: white;
     margin: 5px;
     padding: 5px;
@@ -27,6 +29,8 @@
 }
 
 .editReview {
+    display:  block;
+    width: 50px;
     margin: 5px;
     padding: 5px;
     border-radius: 4px;
@@ -40,7 +44,10 @@
 }
 
 #buttons {
+    flex: auto;
+    display: block;
+    flex-direction: column;
     margin-top: 25px;
     position: absolute;
-    left: 440px;
+    left: 480px;
 }
