fix some syntax across the board, remove some now unnecessary console.logs

--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -4,10 +4,10 @@
     height: 50px;
     display: flex;
     justify-content: space-around;
-}
+};
 
 .technologyName {
     margin-top: 5px;
     color: gray;
     font-size: 10px;
-}
+};
