--- a/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
+++ b/frontend/src/components/HomePageBusinessPreview/HomePageBusinessPreview.module.css
@@ -9,12 +9,7 @@
     margin-bottom: 40px;
 }
 
-#help {
+#shownBusinesses {
      /* display: flex;
     flex-wrap: wrap; */
-    background-color: pink;
-}
-
-#junk {
-    background-color: pink;
 }
