change login button font back to white

--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -139,7 +139,7 @@
     border: 2px solid white;
     background-color: transparent;
     width: 55px;
-    color: purple;
+    color: white;
     border-radius: 5px;
     padding: 16px;
     padding-top: 12px;
