adjust reviews CSS and homepagebusinesspreviewitems css

--- a/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
+++ b/frontend/src/components/BusinessItemShow/BusinessItemShow.module.css
@@ -59,7 +59,7 @@
 .singleReview {
     margin-bottom: 20px;
     padding: 10px;
-    width: 500px;
+    width: 60%;
     border-top: 1px solid #ebebeb;
     border-bottom: 1px solid #ebebeb;
 }
