--- a/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
+++ b/frontend/src/components/HomePageBusinessItem/HomePageBusinessItem.module.css
@@ -10,11 +10,16 @@
     cursor: pointer;
 }
 
+.displayInlineBlock:hover {
+    border-right: 1px solid #ebebeb;
+    border-left: 1px solid #ebebeb;
+    box-shadow: 0 0 18px #00000026;
+}
+
 .homePageBusinessItemContainer {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-
     border-radius: 3px;
     height: 200px;
     width: 40%;
